WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285812
REGRESSION(
288696@main
): [GStreamer][Debug] Triggers ASSERT when running webrtc/video-maxBitrate-vp8.html
https://bugs.webkit.org/show_bug.cgi?id=285812
Summary
REGRESSION(288696@main): [GStreamer][Debug] Triggers ASSERT when running webr...
Philippe Normand
Reported
2025-01-12 01:52:01 PST
Thread 1 (Thread 0x7f9475ffb6c0 (LWP 1390957)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:367 #1 0x00007f98fc882691 in WTF::RefCountedBase::applyRefDerefThreadingCheck() const (this=0x7f9797012260) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/RefCounted.h:119 #2 0x00007f98fc8a10a8 in WTF::RefCountedBase::ref() const (this=0x7f9797012260) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/RefCounted.h:47 #3 0x00007f9900368ca6 in WebCore::RTCPeerConnection::ref() const (this=0x7f9797012240) at /app/webkit/Source/WebCore/Modules/mediastream/RTCPeerConnection.h:94 #4 0x00007f990038a797 in WTF::DefaultRefDerefTraits<WebCore::RTCPeerConnection>::ref(WebCore::RTCPeerConnection&) (ref=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Ref.h:55 #5 0x00007f990037b3d4 in WTF::Ref<WebCore::RTCPeerConnection, WTF::RawPtrTraits<WebCore::RTCPeerConnection>, WTF::DefaultRefDerefTraits<WebCore::RTCPeerConnection> >::Ref(WebCore::RTCPeerConnection&) (this=0x7f9475ff8bb8, object=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Ref.h:86 #6 0x00007f9901240a7a in WebCore::PeerConnectionBackend::protectedPeerConnection() const (this=0x7f98d99f0a40) at /app/webkit/Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:584 #7 0x00007f9901308d3a in WebCore::GStreamerPeerConnectionBackend::dispatchSenderBitrateRequest(WTF::GRefPtr<_GstWebRTCDTLSTransport> const&, unsigned int) (this=0x7f98d99f0a40, transport=..., bitrate=2081848) at /app/webkit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:144 #8 0x00007f9901305657 in operator()(GstElement*, GParamSpec*, gpointer) const (__closure=0x0, estimator=0x7f949c00b2c0, userData=0x7f98d9a340c0) at /app/webkit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:1820 #9 0x00007f99013056b2 in _FUN(GstElement*, GParamSpec*, gpointer) () at /app/webkit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:1820 #10 0x00007f98ef3924ea in g_closure_invoke (closure=0x7f949c00bc70, return_value=0x0, n_param_values=2, param_values=0x7f9475ff8e40, invocation_hint=0x7f9475ff8dc0) at ../gobject/gclosure.c:832 #11 0x00007f98ef3c1b86 in signal_emit_unlocked_R.isra.0 (node=node@entry=0x560c3983ea70, detail=detail@entry=4727, instance=instance@entry=0x7f949c00b2c0, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7f9475ff8e40) at ../gobject/gsignal.c:3812 #12 0x00007f98ef3b292e in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7f9475ff9000) at ../gobject/gsignal.c:3565 #13 0x00007f98ef3b2c03 in g_signal_emit (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>) at ../gobject/gsignal.c:3622 #14 0x00007f98ef39dd14 in g_object_dispatch_properties_changed (object=0x7f949c00b2c0, n_pspecs=<optimized out>, pspecs=<optimized out>) at ../gobject/gobject.c:1428 #15 0x00007f98e6d0aa29 in gst_object_dispatch_properties_changed (object=0x7f949c00b2c0, n_pspecs=1, pspecs=0x7f9475ff9170) at ../gst/gstobject.c:457 #16 0x00007f98ef3a471f in g_object_notify_by_spec_internal (pspec=<optimized out>, object=0x7f949c00b2c0) at ../gobject/gobject.c:1552 #17 g_object_notify (property_name=<optimized out>, object=0x7f949c00b2c0) at ../gobject/gobject.c:1602 #18 g_object_notify (object=0x7f949c00b2c0, property_name=<optimized out>) at ../gobject/gobject.c:1579 #19 0x00007f959c592791 in <core::panic::unwind_safe::AssertUnwindSafe<F> as core::ops::function::FnOnce<()>>::call_once::h8d7d56a3948a5cb4 () at /usr/lib/x86_64-linux-gnu/gstreamer-1.0/libgstrsrtp.so #20 0x00007f959c5393ed in gstreamer::subclass::element::ElementImplExt::catch_panic_pad_function::hd6bec45cca864f1e () at /usr/lib/x86_64-linux-gnu/gstreamer-1.0/libgstrsrtp.so #21 0x00007f959c597f9c in gstreamer::pad::trampoline_event_function::hecefd4b27e8bdfc3 () at /usr/lib/x86_64-linux-gnu/gstreamer-1.0/libgstrsrtp.so #22 0x00007f98e6d6036d in gst_pad_send_event_unchecked (pad=pad@entry=0x7f949c00b830, event=event@entry=0x7f9498039a40, type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_UPSTREAM) at ../gst/gstpad.c:5982 #23 0x00007f98e6d60a4d in gst_pad_push_event_unchecked (pad=pad@entry=0x7f949c005d30, event=event@entry=0x7f9498039a40, type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_UPSTREAM) at ../gst/gstpad.c:5608 #24 0x00007f98e6d63f06 in gst_pad_push_event (pad=0x7f949c005d30, event=0x7f9498039a40) at ../gst/gstpad.c:5754 #25 0x00007f98e6d5b283 in event_forward_func (pad=pad@entry=0x7f949c005d30, data=data@entry=0x7f9475ff9790) at ../gst/gstpad.c:3156 #26 0x00007f98e6d5affe in gst_pad_forward (pad=pad@entry=0x7f949c00bd10, forward=forward@entry=0x7f98e6d5b1c0 <event_forward_func>, user_data=user_data@entry=0x7f9475ff9790) at ../gst/gstpad.c:3110 #27 0x00007f98e6d5b0e9 in gst_pad_event_default (pad=0x7f949c00bd10, parent=<optimized out>, event=0x7f9498039a40) at ../gst/gstpad.c:3207 #28 0x00007f98e6d6036d in gst_pad_send_event_unchecked (pad=pad@entry=0x7f949c00bd10, event=event@entry=0x7f9498039a40, type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_UPSTREAM) at ../gst/gstpad.c:5982 #29 0x00007f98e6d60a4d in gst_pad_push_event_unchecked (pad=pad@entry=0x7f949c008570, event=event@entry=0x7f9498039a40, type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_UPSTREAM) at ../gst/gstpad.c:5608 #30 0x00007f98e6d63f06 in gst_pad_push_event (pad=pad@entry=0x7f949c008570, event=0x7f9498039a40) at ../gst/gstpad.c:5754 #31 0x00007f98687535ec in gst_rtp_session_notify_twcc (sess=<optimized out>, twcc_packets=0x7f94980647c0, twcc_stats=0x7f949804b140, user_data=0x7f944403fcb0) at ../gst/rtpmanager/gstrtpsession.c:3008 #32 0x00007f9868740d75 in rtp_session_process_twcc (sender_ssrc=<optimized out>, media_ssrc=<optimized out>, fci_length=<optimized out>, fci_data=<optimized out>, sess=<optimized out>) at ../gst/rtpmanager/rtpsession.c:3001 #33 rtp_session_process_feedback (current_time=<optimized out>, pinfo=0x7f9475ff9c50, packet=0x7f9475ff9af0, sess=<optimized out>) at ../gst/rtpmanager/rtpsession.c:3101 #34 rtp_session_process_rtcp (sess=<optimized out>, buffer=<optimized out>, current_time=<optimized out>, running_time=<optimized out>, ntpnstime=<optimized out>) at ../gst/rtpmanager/rtpsession.c:3185 #35 0x00007f9868746f4a in gst_rtp_session_chain_recv_rtcp (pad=pad@entry=0x7f94440438b0, parent=parent@entry=0x7f944403fcb0, buffer=buffer@entry=0x7f9488004b30) at ../gst/rtpmanager/gstrtpsession.c:2187 #36 0x00007f98e6d5ebbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f94440438b0, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4494 #37 0x00007f98e6d61fce in gst_pad_push_data (pad=pad@entry=0x7f9444044650, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4770 #38 0x00007f98e6d62604 in gst_pad_push (pad=0x7f9444044650, buffer=0x7f9488004b30) at ../gst/gstpad.c:4889 #39 0x00007f98e6d42f5b in gst_proxy_pad_chain_default (pad=pad@entry=0x7f9444044270, parent=parent@entry=0x560c3a339a90, buffer=buffer@entry=0x7f9488004b30) at ../gst/gstghostpad.c:127 #40 0x00007f98e6d5ebbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f9444044270, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4494 #41 0x00007f98e6d61fce in gst_pad_push_data (pad=pad@entry=0x7f944403d300, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4770 #42 0x00007f98e6d62604 in gst_pad_push (pad=0x7f944403d300, buffer=0x7f9488004b30) at ../gst/gstpad.c:4889 #43 0x00007f98e6d42f5b in gst_proxy_pad_chain_default (pad=pad@entry=0x7f944403e070, parent=parent@entry=0x7f944403d300, buffer=buffer@entry=0x7f9488004b30) at ../gst/gstghostpad.c:127 #44 0x00007f98e6d5ebbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f944403e070, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4494 #45 0x00007f98e6d61fce in gst_pad_push_data (pad=pad@entry=0x7f9444008ea0, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4770 #46 0x00007f98e6d62604 in gst_pad_push (pad=0x7f9444008ea0, buffer=0x7f9488004b30) at ../gst/gstpad.c:4889 #47 0x00007f98e6d42f5b in gst_proxy_pad_chain_default (pad=pad@entry=0x7f9444009250, parent=parent@entry=0x7f9444008ea0, buffer=buffer@entry=0x7f9488004b30) at ../gst/gstghostpad.c:127 #48 0x00007f98e6d5ebbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f9444009250, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4494 #49 0x00007f98e6d61fce in gst_pad_push_data (pad=pad@entry=0x7f9444006330, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4770 #50 0x00007f98e6d62604 in gst_pad_push (pad=pad@entry=0x7f9444006330, buffer=buffer@entry=0x7f9488004b30) at ../gst/gstpad.c:4889 #51 0x00007f9888021727 in gst_srtp_dec_chain (pad=0x7f9444005470, parent=<optimized out>, buf=<optimized out>, is_rtcp=<optimized out>) at ../ext/srtp/gstsrtpdec.c:1534 #52 0x00007f98e6d5ebbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f9444005470, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4494 #53 0x00007f98e6d61fce in gst_pad_push_data (pad=pad@entry=0x7f9444006ea0, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4770 #54 0x00007f98e6d62604 in gst_pad_push (pad=0x7f9444006ea0, buffer=buffer@entry=0x7f9488004b30) at ../gst/gstpad.c:4889 #55 0x00007f98286e2075 in sink_chain (pad=pad@entry=0x7f94440069e0, parent=parent@entry=0x7f94440066b0, buffer=buffer@entry=0x7f9488004b30) at ../ext/dtls/gstdtlssrtpdemux.c:135 #56 0x00007f98e6d5ebbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f94440069e0, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4494 #57 0x00007f98e6d61fce in gst_pad_push_data (pad=pad@entry=0x7f9444009a90, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4770 #58 0x00007f98e6d62604 in gst_pad_push (pad=0x7f9444009a90, buffer=0x7f9488004b30) at ../gst/gstpad.c:4889 #59 0x00007f98e6d42f5b in gst_proxy_pad_chain_default (pad=pad@entry=0x7f94440096e0, parent=parent@entry=0x7f9444004c10, buffer=buffer@entry=0x7f9488004b30) at ../gst/gstghostpad.c:127 #60 0x00007f98e6d5ebbc in gst_pad_chain_data_unchecked (pad=pad@entry=0x7f94440096e0, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4494 #61 0x00007f98e6d61fce in gst_pad_push_data (pad=pad@entry=0x7f944403b300, type=type@entry=4112, data=data@entry=0x7f9488004b30) at ../gst/gstpad.c:4770 #62 0x00007f98e6d62604 in gst_pad_push (pad=0x7f944403b300, buffer=buffer@entry=0x7f9488004b30) at ../gst/gstpad.c:4889 #63 0x00007f98886790e9 in gst_queue_push_one (queue=0x7f944403a980) at ../plugins/elements/gstqueue.c:1436 #64 gst_queue_loop (pad=<optimized out>) at ../plugins/elements/gstqueue.c:1589 #65 0x00007f98e6d968b4 in gst_task_func (task=0x560c3b28da50) at ../gst/gsttask.c:399 #66 0x00007f98ef2c94f2 in g_thread_pool_thread_proxy (data=<optimized out>) at ../glib/gthreadpool.c:350 #67 0x00007f98ef2c6862 in g_thread_proxy (data=0x7f9798001be0) at ../glib/gthread.c:831 #68 0x00007f98e72a1e39 in start_thread (arg=<optimized out>) at pthread_create.c:444 #69 0x00007f98e73298c4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-01-12 04:19:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38906
EWS
Comment 2
2025-01-14 10:21:52 PST
Committed
288861@main
(90f7ce30e469): <
https://commits.webkit.org/288861@main
> Reviewed commits have been landed. Closing PR #38906 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-14 10:22:19 PST
<
rdar://problem/142893054
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug