REGRESSION(288696@main): [GStreamer][Debug] Triggers ASSERT when running webrtc/video-maxBitrate-vp8.html https://bugs.webkit.org/show_bug.cgi?id=285812

Reviewed by Xabier Rodriguez-Calvar.

Dispatch bitrate update requests from the main thread, because the RTCPeerConnection weak ref is
only usable from that thread.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::requestAuxiliarySender):

Canonical link: https://commits.webkit.org/288861@main